--- a/src/app/main/assets/MainPage.module.scss
+++ b/src/app/main/assets/MainPage.module.scss
@@ -117,7 +117,7 @@
       font-weight: 600;
       margin: 0;
       pointer-events: none;
-      transform: translateY(1px);
+      transform: translateY(1px) translateX(-2px);
     }
   }
 }
